# goodspot

./: CMakeLists.txt  manifest.json.in
app/: CMakeLists.txt  MainPage.qml  ScannerPage.qml  goodspot.desktop.in  goodspot.qml
backend/: CMakeLists.txt
backend/modules/goodspot/: backend.cpp  backend.h  qmldir  spotconnect.h
backend/tests/unit/: tst_mytype.qml
cmake/: Click.cmake
